# sphinx-swagger2-api-doc

./: LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  upload.sh
sphinxcontrib/: SwaggerAPIContext.py  swagger2.py
sphinxcontrib/sphinx-swagger2-api-doc/: __init__.py  swagger_api.py
tests/: conftest.py  test.jinja2
